developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Score_Key_Contributing_Factor__c/OJSERLIB__VEDA_Score_Key_Contributing_Factor__c.object-meta.xml
<CustomObject>
    <label>VEDA Score Key Contributing Factor</label>
    <nameField>
        <displayFormat>SKC-{0000}</displayFormat>
        <label>VEDA Score Key Contributing Factor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VEDA Score Key Contributing Factors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>