developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Score_Key_Contributing_Factor__c/fields/OJSERLIB__Contributing_Factor_Name__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Contributing_Factor_Name__c</fullName>
    <label>Contributing Factor Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>