developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Score_Key_Contributing_Factor__c/fields/OJSERLIB__Description__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Description__c</fullName>
    <label>Description</label>
    <length>225</length>
    <type>Text</type>
</CustomField>