developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Score_Key_Contributing_Factor__c/fields/OJSERLIB__Score_Impactor__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Score_Impactor__c</fullName>
    <label>Score Impactor</label>
    <length>40</length>
    <type>Text</type>
</CustomField>