developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Score_Key_Contributing_Factor__c/fields/OJSERLIB__VEDA_Score__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__VEDA_Score__c</fullName>
    <label>VEDA Score</label>
    <referenceTo>OJSERLIB__VEDA_Score__c</referenceTo>
    <relationshipLabel>VEDA Score Key Contributing Factors</relationshipLabel>
    <relationshipName>VEDA_Score_Key_Contributing_Factors</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>